<resources>
    <string name="app_name">SleepORama</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_collect">CollectActivity</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="date">Date: xxxxxx</string>
    <string name="welcome">Welcome, xxxxxx</string>
    <string name="logout">LOGOUT</string>
    <string name="startSleeping">START SLEEPING</string>
</resources>
